NTU-738 Upgrade to Java 21
Upgrade dependencies
Clean up code
Get rid of build warnings